--- a/src/main/java/org/meteothink/trajstat/forms/FrmAbout.form
+++ b/src/main/java/org/meteothink/trajstat/forms/FrmAbout.form
@@ -39,7 +39,7 @@
                           <Group type="102" attributes="0">
                               <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="jLabel_Version" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabel_Version" min="-2" pref="74" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
